overflow erro fixed

--- a/Acuitus_Culsoltancy/src/assets/styles/landingPage/newsletter-section.scss
+++ b/Acuitus_Culsoltancy/src/assets/styles/landingPage/newsletter-section.scss
@@ -74,8 +74,6 @@
     grid-auto-rows: 150px;
     place-content: center;
     grid-gap: 50px;
-    padding-left: 50px;
-    padding-right: 50px;
     margin-top: 7rem;
     margin-right: auto;
     @media screen and (max-width: 640px) {
